src/MiniJava/Tests/DriverTests/nonstatic_references_from_main.mj
class Main
{
    int foo;
    public static void main()
    {
        foo = 42; // should complain
        this.foo = 42; // should complain
    }
}
